--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -398,6 +398,7 @@ html, body {
       <a href="edits.html">Edit Habits</a>
       <a href="Progress.html">Progress</a>
       <a href="About_Us.html">About</a>
+      <a href="login.html">Login</a>
     </div>
   </nav>
 
@@ -479,8 +480,7 @@ DoneDay is built for those who want results that last — not streaks that break
     <p>Follow us: <a href="https://www.linkedin.com/in/mori-aryan-54475a328/">Facebook</a> | <a href="https://www.linkedin.com/in/mori-aryan-54475a328/">Twitter</a> | <a href="https://www.linkedin.com/in/mori-aryan-54475a328/">Instagram</a></p>
     <p><a href="About_Us.html">Privacy Policy</a> | <a href="About_Us.html">Terms of Service</a></p>
   </footer>
-  <!-- <button id="complete-day-btn" style="position:fixed;bottom:30px;right:30px;z-index:999;">Complete Day</button> -->
-
+  <button id="complete-day-btn" style="position:fixed;bottom:30px;right:30px;z-index:999;">Complete Day</button>
   <script src="script.js"> 
 
  </script>
